--- a/browser/history
+++ b/browser/history
@@ -1,30 +1,30 @@
-file:/home/morr/.vimdata/ruby/core/Vector.html 1260574683 Class: Vector
-file:///home/morr/.vimdata/ruby/stdlib/pp/rdoc/fr_method_index.html 1260574853 Methods
-file:/home/morr/.vimdata/ruby/stdlib/pp/rdoc/index.html 1260574932 pp: Ruby Standard Library Documentation
-file:///home/morr/.vimdata/ruby/core/FileUtils.html 1260575341 Module: FileUtils
-file:///home/morr/.vimdata/ruby/core/File.html 1260575346 Class: File
-file:///home/morr/.vimdata/ruby/core/File.src/M002554.html 1260575349 path (File)
-file:/home/morr/.vimdata/ruby/stdlib/pp/rdoc/files/pp_rb.html 1260575373 File: pp.rb
-file:///home/morr/.vimdata/ruby/core/File.src/M002588.html 1260575490 chmod (File)
-file:///home/morr/.vimdata/ruby/core/String.html 1260575556 Class: String
-file:/home/morr/.vimdata/ruby/core/String.html 1260575618 Class: String
 file:/home/morr/.vimdata/ruby/core/Fixnum.html 1260624307 Class: Fixnum
 file:///home/morr/.vimdata/ruby/core/Fixnum.html 1260624339 Class: Fixnum
 file:/home/morr/.vimdata/ruby/core/SyntaxError.html 1260640361 Class: SyntaxError
 file:///home/morr/.vimdata/ruby/core/Enumerable.html 1260719077 Module: Enumerable
-file:/home/morr/.vimdata/ruby/core/Time.html 1260907536 Class: Time
 file:///home/morr/.vimdata/ruby/core/Time.html 1260907662 Class: Time
 file:///home/morr/.vimdata/ruby/core/Array.html 1261003013 Class: Array
 file:///home/morr/.vimdata/ruby/core/Hash.html 1261072556 Class: Hash
 file:///home/morr/.vimdata/ruby/core/Dir.html 1261087514 Class: Dir
 http://dictionary.reference.com/?db=*&o=0&l=dir 1261419581 Dictionary.com | Find the Meanings and Definitions of Words at Dictionary.com
-http://dictionary.reference.com/browse/IMAGE?db=* 1261419584 Image Definition | Definition of Image at Dictionary.com
 http://ya.ru 1262047437 Ð¯Ð½Ð´ÐµÐºÑ
 file:/home/morr/.vimdata/ruby/core/Benchmark.html 1262047550 Module: Benchmark
 file:/home/morr/.vimdata/ruby/core/GetoptLong.html 1262095442 Class: GetoptLong
-file:/home/morr/.vimdata/ruby/core/Hash.html 1262097657 Class: Hash
-file:/home/morr/.vimdata/ruby/core/Enumerable.html 1262097674 Module: Enumerable
 file:/home/morr/.vimdata/ruby/core/Regexp.html 1262101661 Class: Regexp
-file:/home/morr/.vimdata/ruby/core/Array.html 1262103739 Class: Array
 file:/home/morr/.vimdata/ruby/core/Dir.html 1262116111 Class: Dir
 file:/home/morr/.vimdata/ruby/core/File.html 1274721414 Class: File
+http://dictionary.reference.com/browse/sessions?db=* 1276945154 Sessions | Define Sessions at Dictionary.com
+http://dictionary.reference.com/browse/IMAGE?db=* 1276945156 Image | Define Image at Dictionary.com
+file:/home/morr/.vimdata/ruby/core/Time.html 1277562986 Class: Time
+file:/home/morr/.vimdata/ruby/core/RSS.html 1278437547 Module: RSS
+file:/home/morr/.vimdata/ruby/core/String.html 1278441110 Class: String
+file:/home/morr/.vimdata/ruby/core/Hash.html 1278524609 Class: Hash
+file:/home/morr/.vimdata/ruby/core/Class.html 1278525002 Class: Class
+file:/home/morr/.vimdata/ruby/core/Interrupt.html 1278617289 Class: Interrupt
+file:/home/morr/.vimdata/ruby/stdlib/find/rdoc/files/find_rb.html 1278709205 File: find.rb
+file:/home/morr/.vimdata/ruby/core/Thread.html 1278709763 Class: Thread
+file:/var/lib/gems/1.8/doc/json-1.4.3/rdoc/JSON.html 1278709774 Module: JSON
+file:/home/morr/.vimdata/ruby/core/Generator.html 1278710115 Class: Generator
+file:/var/lib/gems/1.8/doc/json-1.4.3/rdoc/JSON/Pure.html 1278710123 Module: JSON::Pure
+file:/home/morr/.vimdata/ruby/core/Array.html 1278716267 Class: Array
+file:/home/morr/.vimdata/ruby/core/Enumerable.html 1278716288 Module: Enumerable
