--- a/browser/history
+++ b/browser/history
@@ -1,30 +1,30 @@
-file:/home/morr/.vimdata/ruby/core/Fixnum.html 1260624307 Class: Fixnum
-file:///home/morr/.vimdata/ruby/core/Fixnum.html 1260624339 Class: Fixnum
-file:/home/morr/.vimdata/ruby/core/SyntaxError.html 1260640361 Class: SyntaxError
-file:///home/morr/.vimdata/ruby/core/Enumerable.html 1260719077 Module: Enumerable
-file:///home/morr/.vimdata/ruby/core/Time.html 1260907662 Class: Time
-file:///home/morr/.vimdata/ruby/core/Array.html 1261003013 Class: Array
-file:///home/morr/.vimdata/ruby/core/Hash.html 1261072556 Class: Hash
-file:///home/morr/.vimdata/ruby/core/Dir.html 1261087514 Class: Dir
 http://dictionary.reference.com/?db=*&o=0&l=dir 1261419581 Dictionary.com | Find the Meanings and Definitions of Words at Dictionary.com
 http://ya.ru 1262047437 Ð¯Ð½Ð´ÐµÐºÑ
 file:/home/morr/.vimdata/ruby/core/Benchmark.html 1262047550 Module: Benchmark
 file:/home/morr/.vimdata/ruby/core/GetoptLong.html 1262095442 Class: GetoptLong
-file:/home/morr/.vimdata/ruby/core/Regexp.html 1262101661 Class: Regexp
 file:/home/morr/.vimdata/ruby/core/Dir.html 1262116111 Class: Dir
-file:/home/morr/.vimdata/ruby/core/File.html 1274721414 Class: File
 http://dictionary.reference.com/browse/sessions?db=* 1276945154 Sessions | Define Sessions at Dictionary.com
 http://dictionary.reference.com/browse/IMAGE?db=* 1276945156 Image | Define Image at Dictionary.com
 file:/home/morr/.vimdata/ruby/core/Time.html 1277562986 Class: Time
 file:/home/morr/.vimdata/ruby/core/RSS.html 1278437547 Module: RSS
-file:/home/morr/.vimdata/ruby/core/String.html 1278441110 Class: String
-file:/home/morr/.vimdata/ruby/core/Hash.html 1278524609 Class: Hash
 file:/home/morr/.vimdata/ruby/core/Class.html 1278525002 Class: Class
 file:/home/morr/.vimdata/ruby/core/Interrupt.html 1278617289 Class: Interrupt
 file:/home/morr/.vimdata/ruby/stdlib/find/rdoc/files/find_rb.html 1278709205 File: find.rb
-file:/home/morr/.vimdata/ruby/core/Thread.html 1278709763 Class: Thread
 file:/var/lib/gems/1.8/doc/json-1.4.3/rdoc/JSON.html 1278709774 Module: JSON
 file:/home/morr/.vimdata/ruby/core/Generator.html 1278710115 Class: Generator
 file:/var/lib/gems/1.8/doc/json-1.4.3/rdoc/JSON/Pure.html 1278710123 Module: JSON::Pure
-file:/home/morr/.vimdata/ruby/core/Array.html 1278716267 Class: Array
-file:/home/morr/.vimdata/ruby/core/Enumerable.html 1278716288 Module: Enumerable
+file:/home/morr/.vimdata/ruby/core/File.html 1279041916 Class: File
+file:/var/lib/gems/1.8/doc/escape-0.0.4/rdoc/Escape.html 1279224030 Module: Escape
+file:/home/morr/.vimdata/ruby/core/Regexp.html 1279528045 Class: Regexp
+file:/var/lib/gems/1.8/doc/rmagick-2.13.1/rdoc/Magick/Image.html 1282330468 Class: Magick::Image
+file:/var/lib/gems/1.8/doc/rmagick-2.13.1/rdoc/Magick.html 1282330512 Module: Magick
+file:/var/lib/gems/1.8/doc/rmagick-2.13.1/rdoc/Magick/ImageList.html 1282330592 Class: Magick::ImageList
+file:/home/morr/.vimdata/ruby/core/Object.html 1282387640 Class: Object
+file:/home/morr/.vimdata/ruby/core/Comparable.html 1282421532 Module: Comparable
+file:/home/morr/.vimdata/ruby/core/Integer.html 1282426651 Class: Integer
+file:/home/morr/.vimdata/ruby/core/Mutex.html 1285537567 Class: Mutex
+file:/home/morr/.vimdata/ruby/core/String.html 1285546032 Class: String
+file:/home/morr/.vimdata/ruby/core/Thread.html 1285586591 Class: Thread
+file:/home/morr/.vimdata/ruby/core/Enumerable.html 1285593751 Module: Enumerable
+file:/home/morr/.vimdata/ruby/core/Hash.html 1285593770 Class: Hash
+file:/home/morr/.vimdata/ruby/core/Array.html 1285593888 Class: Array
