--- a/README.textile
+++ b/README.textile
@@ -3,15 +3,12 @@ h1. Usage
 Clone this repo into your home directory either as .vim (linux) or vimfiles (MF
 Windows).
 
-Then cd into the repo and run this to get the snippets submodule:
+Then cd into the repo and run this to get plugins:
 
-<pre><code>
-git submodule init
-git submodule update
+<pre><code>./update_bundles
 </code></pre>
 
-Put this in your vimrc along with your personal hacks:
-<pre><code>
-source ~/.vim/gvimrc      "linux
+Put this in your ~/.vimrc along with your personal hacks:
+<pre><code>source ~/.vim/gvimrc      "linux
 source ~/vimfiles/gvimrc  "windows
 </code></pre>
